--- a/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
@@ -19,7 +19,7 @@
         </Grid.ColumnDefinitions>
        
         <ContentPresenter Content="{Binding }" />
-        <DataGrid Name="BriefContentLetters" AutoGenerateColumns="False"  Grid.Column="2" Margin="0,20,0,0" ItemsSource="{Binding Letters}" SelectedItem="{Binding Path=SelectedLetter}" SelectedValue="{Binding Path=SelectesLetter}"  IsReadOnly="True" MinWidth="300" MinHeight="300">
+        <DataGrid Name="BriefContentLetters" AutoGenerateColumns="False" SelectionMode="Single" Grid.Column="2" Margin="0,20,0,0" ItemsSource="{Binding Letters}" SelectedItem="{Binding Path=SelectedLetter}" IsReadOnly="True" MinWidth="300" MinHeight="300">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Title" Binding="{Binding Path=Name}" Width="90" />
                 <DataGridHyperlinkColumn Header="SenderName" Binding="{Binding Path=SenderName}" Width="80" />
