--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/AuthorizationControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/AuthorizationControl.xaml
@@ -4,13 +4,57 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Registration.WPF.Views.Controls"
-             mc:Ignorable="d" Height="92.861" Width="203.325">
-    <Grid Margin="0,0,156,168">
-        <TextBox x:Name="txtLogin" HorizontalAlignment="Left" Height="23" Margin="70,3,-143,-26" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Login, Mode=TwoWay}"/>
-        <Label x:Name="labelLogin" Content="Login:" HorizontalAlignment="Left" Margin="3,3,0,-29" VerticalAlignment="Top"/>
-        <Label x:Name="labelLogin_Copy" Content="Password:" HorizontalAlignment="Left" Margin="3,33,-18,-59" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtPassword" HorizontalAlignment="Left" Height="23" Margin="70,33,-143,-56" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="{Binding Password, Mode=TwoWay}"/>
-        <Label x:Name="labelLogin_Copy1" Content="Database:" HorizontalAlignment="Left" Margin="3,63,-18,-89" VerticalAlignment="Top"/>
-        <ComboBox x:Name="comboDatabases" HorizontalAlignment="Left" Margin="70,63,-143,-85" VerticalAlignment="Top" Width="120" ItemsSource="{Binding Path=DatabasesNames, Mode=TwoWay}" SelectedItem="{Binding _selectedDatabaseName, Mode=TwoWay}" SelectedIndex="{Binding _selectedDatabaseIndex, Mode=TwoWay}"/>
+             mc:Ignorable="d" Height="100" Width="200">
+    
+    <UserControl.Resources>
+        
+        <Style  TargetType="ComboBox">
+            <Setter Property="Margin" Value="3"/>
+            <Setter Property="VerticalAlignment" Value="Stretch"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="Height" Value="20"/>
+            <Setter Property="Width" Value="120"/>
+        </Style>
+
+        <Style TargetType="Label">
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Margin" Value="0"/>
+            <Setter Property="Height" Value="26"/>
+            <Setter Property="Width" Value="80"/>
+        </Style>
+
+        <Style TargetType="TextBox">
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="Height" Value="20"/>
+            <Setter Property="Width" Value="120"/>
+            <Setter Property="Margin" Value="3"/>
+            <Setter Property="TextWrapping" Value="Wrap"/>
+        </Style>
+
+    </UserControl.Resources>
+
+
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="63*" />
+            <ColumnDefinition Width="137*" />
+        </Grid.ColumnDefinitions>
+        
+        <StackPanel Grid.Column="0">
+            <Label x:Name="labelPassword" Content="Password:"/>
+            <Label x:Name="labelLogin" Content="Login:" />
+            <Label x:Name="labelDatabase" Content="Database:"/>
+        </StackPanel>
+
+        <StackPanel Grid.Column="1">
+            <TextBox x:Name="txtLogin" Text="{Binding Login, Mode=TwoWay}" />
+            <TextBox x:Name="txtPassword" Text="{Binding Password, Mode=TwoWay}"/>
+
+            <ComboBox x:Name="comboDatabases" ItemsSource="{Binding Path=DatabasesNames, Mode=TwoWay}" SelectedItem="{Binding _selectedDatabaseName, Mode=TwoWay}" SelectedIndex="{Binding _selectedDatabaseIndex, Mode=TwoWay}" />
+        </StackPanel>
+        
     </Grid>
+
 </UserControl>
