--- a/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
@@ -19,11 +19,11 @@
         </Grid.ColumnDefinitions>
        
         <ContentPresenter Content="{Binding }" />
-        <DataGrid Name="BriefContentLetters" AutoGenerateColumns="False" SelectionMode="Single" Grid.Column="2" Margin="0,20,0,0" ItemsSource="{Binding Letters}" SelectedItem="{Binding Path=SelectedLetter}" IsReadOnly="True" MinWidth="300" MinHeight="300">
+        <DataGrid Name="BriefContentLetters" AutoGenerateColumns="False" SelectionMode="Single" Grid.Column="2" Margin="0,20,0,0" ItemsSource="{Binding Letters}" SelectedItem="{Binding SelectedLetter}" IsReadOnly="True" MinWidth="300" MinHeight="300">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Title" Binding="{Binding Path=Name}" Width="90" />
-                <DataGridHyperlinkColumn Header="SenderName" Binding="{Binding Path=SenderName}" Width="80" />
-                <DataGridTextColumn Header="Date" Binding="{Binding Path=Date}" Width="50" />
+                <DataGridTextColumn Header="Title" Binding="{Binding Path=Name}" Width="100" />
+                <DataGridHyperlinkColumn Header="SenderName" Binding="{Binding Path=SenderName}" Width="150" />
+                <DataGridTextColumn Header="Date" Binding="{Binding Path=Date}" Width="150" />
             </DataGrid.Columns>
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseDoubleClick">
@@ -49,7 +49,7 @@
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="SelectedItemChanged">
                         <i:InvokeCommandAction
-                           Command="{Binding SelectedItemChanged}"
+                           Command="{Binding SelectedFolderNodeChanged}"
                            CommandParameter="{Binding SelectedItem, ElementName=TV}" />
                     </i:EventTrigger>
 
@@ -74,7 +74,7 @@
         HorizontalAlignment="Center" VerticalAlignment="Stretch" />
         <GridSplitter Grid.Column="3" ShowsPreview="False" Width="3"
         HorizontalAlignment="Center" VerticalAlignment="Stretch" />
-        <Menu Height="20"  VerticalAlignment="Top" Grid.ColumnSpan="6" Margin="0,0,-71,0">
+        <Menu Height="20"  VerticalAlignment="Top" Grid.ColumnSpan="6" Margin="0,0,-71,0" >
             
             <MenuItem x:Name="X" Header="New Letter" DisplayMemberPath="Name" ItemsSource="{Binding Path=ExistLettersTypes}">
                 <MenuItem.Icon>
