--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/LetterViewWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/LetterViewWindow.xaml
@@ -5,16 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Registration.WPF.Views"
         mc:Ignorable="d"
+        x:Name="letterViewWindow"
         xmlns:Controls="clr-namespace:Registration.WPF.Views.Controls"
-        Title="FullContentLetterWindow" Height="540" Width="557" WindowStartupLocation="CenterScreen">
+        Title="FullContentLetterWindow" Height="600" Width="557" WindowStartupLocation="CenterScreen">
     <Grid>
         <Menu Name="Menu" Height="20"  VerticalAlignment="Top">
-            <MenuItem Header="Delete Letter" Command="{Binding Path=DeleteLetter}">
+            <MenuItem Header="Delete Letter" Command="{Binding Path=DeleteLetter}"  CommandParameter="{Binding ElementName=letterViewWindow}">
                 <MenuItem.Icon>
                     <Image Source="C:\Users\Ivanova.M\Downloads\DeleteLetter.png"/>
                 </MenuItem.Icon>
             </MenuItem>
         </Menu>
-        <StackPanel x:Name="stackPanel" HorizontalAlignment="Left" Height="461" Margin="10,25,0,0" VerticalAlignment="Top" Width="529"/>
+        <StackPanel x:Name="stackPanel" HorizontalAlignment="Left" Height="545" Margin="10,25,0,-1" VerticalAlignment="Top" Width="529"/>
     </Grid>
 </Window>
