using style in SignUp Window

--- a/DocsVision_Test-master/Registration/Registration.WPF/App.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/App.xaml
@@ -6,5 +6,11 @@
              xmlns:local="clr-namespace:Registration.WPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ResourcesDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
+    
 </Application>
