--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/MakeFolderWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/MakeFolderWindow.xaml
@@ -5,10 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Registration.WPF.Views"
         mc:Ignorable="d"
-        Title="MakeFolderWindow" Height="206.302" Width="368.219" WindowStartupLocation="CenterScreen">
+        Title="MakeFolderWindow" Height="206.302" Width="368.219" WindowStartupLocation="{StaticResource standartWindowStartupLocation}">
+
+    <Window.Resources>
+        <Style TargetType="Button" BasedOn="{StaticResource standartButton}"/>
+    </Window.Resources>
+
     <Grid>
-        <Button x:Name="button" IsCancel="true" Content="Cancel" HorizontalAlignment="Left" Margin="275,131,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="button_Copy" IsDefault="True" Content="Create" HorizontalAlignment="Left" Margin="182,131,0,0" VerticalAlignment="Top" Width="75" Command="{Binding Path=CreateFolder}" Click="CreateButton_click"/>
-        <StackPanel x:Name="stackPanel" HorizontalAlignment="Left" Height="114" VerticalAlignment="Top" Width="350" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="129*"/>
+            <RowDefinition Height="46*"/>
+        </Grid.RowDefinitions>
+
+        <StackPanel x:Name="stackPanel" Grid.Row="0"/>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="1">
+            <Button x:Name="buttonCreate" IsDefault="True" Content="Create" Command="{Binding Path=CreateFolder}" Click="CreateButton_click" />
+            <Button x:Name="buttonCancel" IsCancel="true" Content="Cancel" />
+        </StackPanel>
+
     </Grid>
 </Window>
