--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/StandartLetterControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/StandartLetterControl.xaml
@@ -6,18 +6,44 @@
              xmlns:local="clr-namespace:Registration.WPF.Views.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="544">
-    <Grid>
+    <UserControl.Resources>
+        <Style TargetType="Label" BasedOn="{StaticResource standartLabel}"/>
 
-        <Label x:Name="label" Content="Title" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label_Copy" Content="Sender" HorizontalAlignment="Left" Margin="10,61,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.491,2.637"/>
-        <Label x:Name="label_Copy1" Content="Receivers" HorizontalAlignment="Left" Margin="10,114,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.491,2.637"/>
-        <Label x:Name="label_Copy2" Content="Message" HorizontalAlignment="Left" Margin="10,168,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.491,2.637"/>
-        <TextBox x:Name="title" Height="25" Margin="10,36,197,430" TextWrapping="Wrap" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Title, Mode=TwoWay}"  Width="294" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" HorizontalAlignment="Left"/>
-        <TextBox x:Name="sender" HorizontalAlignment="Left" Height="25" Margin="10,87,0,0" TextWrapping="Wrap" IsReadOnly="True" Text="{Binding Path=SenderName, Mode=TwoWay}" VerticalAlignment="Top" Width="294"/>
-        <TextBox x:Name="message" HorizontalAlignment="Left" Height="296" Margin="10,194,0,0" TextWrapping="Wrap" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Text, Mode=TwoWay}" VerticalAlignment="Top" Width="294"/>
-        <Label x:Name="labelDate" Content="Date" HorizontalAlignment="Left" Margin="373,10,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="date" HorizontalAlignment="Left" Height="25" Margin="373,36,0,0" TextWrapping="Wrap" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Date, Mode=TwoWay}" VerticalAlignment="Top" Width="128"/>
-        <local:WorkersEditorControl x:Name="workersEditorControl" HorizontalAlignment="Left" Margin="10,137,0,0" VerticalAlignment="Top" Width="294" RenderTransformOrigin="0.497,0.617" Height="52"/>
+        <Style TargetType="TextBox" BasedOn="{StaticResource standartTextBox}">
+            <Setter Property="Width" Value="292"/>
+        </Style>
+        <Style x:Key="standartTextBox" BasedOn="{StaticResource standartTextBox}"/>
+        <Style x:Key="standartUSerControl">
+            <Setter Property="UserControl.Margin" Value="1"/>
+        </Style>
+
+    </UserControl.Resources>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="193*"/>
+            <ColumnDefinition Width="79*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="0">
+            <Label x:Name="labelTitle" Content="Title" />
+            <TextBox x:Name="title" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Title, Mode=TwoWay}"/>
+
+            <Label x:Name="labelSenderName" Content="Sender"/>
+            <TextBox x:Name="sender" IsReadOnly="True" Text="{Binding Path=SenderName, Mode=TwoWay}" />
+
+            <Label x:Name="labelReceiversNames" Content="Receivers"/>
+            <local:WorkersEditorControl x:Name="workersEditorControl" />
+
+            <Label x:Name="labelMessage" Content="Message"/>
+            <TextBox x:Name="message" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Text, Mode=TwoWay}"/>
+
+        </StackPanel>
+
+        <StackPanel Grid.Column="1">
+            <Label x:Name="labelDate" Content="Date" />
+            <TextBox x:Name="date" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Date, Mode=TwoWay}" Style="{StaticResource standartTextBox}"/>
+        </StackPanel>
+
 
     </Grid>
 </UserControl>
