--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportanceDegreeEditorControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportanceDegreeEditorControl.xaml
@@ -6,7 +6,13 @@
              xmlns:local="clr-namespace:Registration.WPF.Views.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="128">
+    
+    <UserControl.Resources>
+        <Style TargetType="ComboBox" BasedOn="{StaticResource standartComboBox}"/>
+    </UserControl.Resources>
+    
     <Grid>
-        <ComboBox x:Name="comboImportanceDegree" ItemsSource="{Binding ImportanceDegrees.Values}" SelectedItem="{Binding Path=NameSelectedDegree}" IsEnabled="{Binding Path=Enable}" HorizontalAlignment="Left" Height="25" VerticalAlignment="Top" Width="128"/>
+        <ComboBox x:Name="comboImportanceDegree" ItemsSource="{Binding ImportanceDegrees.Values}" SelectedItem="{Binding Path=NameSelectedDegree}" IsEnabled="{Binding Path=Enable}"/>
     </Grid>
+    
 </UserControl>
