--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/WorkersEditorControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/WorkersEditorControl.xaml
@@ -8,35 +8,53 @@
              
              mc:Ignorable="d" 
              d:DesignHeight="52" d:DesignWidth="211">
-    <Grid Margin="0,0,-80,0">
-        <TextBox x:Name="txtWorkers" HorizontalAlignment="Left" TextWrapping="Wrap" Width="292" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Names}" Margin="0,0,-1,29">
-            <i:Interaction.Triggers>
-                <i:EventTrigger EventName="TextChanged">
-                    <i:InvokeCommandAction
+
+    <UserControl.Resources>
+        <Style TargetType="ListBox" BasedOn="{StaticResource standartListBox}"/>
+
+        <Style TargetType="Button" BasedOn="{StaticResource standartButton}">
+            <Setter Property="Button.Width" Value="27"/>
+            <Setter Property="Button.Height" Value="22"/>
+        </Style>
+
+        <Style TargetType="TextBox" BasedOn="{StaticResource standartTextBox}">
+            <Setter Property="TextBox.Width" Value="210"/>
+            <Setter Property="Margin" Value="3,3,3,0"/>
+        </Style>
+    </UserControl.Resources>
+
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="179*"/>
+            <ColumnDefinition Width="32*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="0" Grid.ColumnSpan="2">
+
+            <TextBox x:Name="txtWorkers"  IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=Names}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="TextChanged">
+                        <i:InvokeCommandAction
                            Command="{Binding Path=ChangedText}"
                 CommandParameter="{Binding ElementName=txtWorkers, Path=Text}" />
-                </i:EventTrigger>
-            </i:Interaction.Triggers>
-            <TextBox.InputBindings>
-                <KeyBinding Command="{Binding Path=FocusToListBox}" Key="Down" />
-            </TextBox.InputBindings>
-        </TextBox>
-        <Button x:Name="btnAllWorkers" Content="..." HorizontalAlignment="Left" Height="22" Margin="265,1,-81,0" VerticalAlignment="Top" Width="27" Visibility="{Binding Path=Enable}" Command="{Binding Path=AddSeveralWorkers}"/>
-        <ListBox x:Name="listWorkers" HorizontalAlignment="Left" Focusable="{Binding Focus}" ItemsSource="{Binding AllWorkers}" Visibility="{Binding Path=Enable}" Margin="0,23,-81,0" Width="292" SelectedItem="{Binding Path=SelectedWorker}">
-            <!-- <i:Interaction.Triggers>
-                <i:EventTrigger EventName="SelectionChanged">
-                    <i:InvokeCommandAction
-                           Command="{Binding Path=AddWorker}"
-                        CommandParameter="{Binding ElementName=listWorkers, Path=SelectedValue}">
-                    </i:InvokeCommandAction>
-                </i:EventTrigger>
-            </i:Interaction.Triggers>-->
-            <ListBox.InputBindings>
-                <KeyBinding Command="{Binding Path=AddWorker}" Key="Enter" 
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+                <TextBox.InputBindings>
+                    <KeyBinding Command="{Binding Path=FocusToListBox}" Key="Down" />
+                </TextBox.InputBindings>
+            </TextBox>
+
+            <ListBox x:Name="listWorkers" Focusable="{Binding Focus}" ItemsSource="{Binding AllWorkers}" Visibility="{Binding Path=Enable}"  SelectedItem="{Binding Path=SelectedWorker}" >
+                <ListBox.InputBindings>
+                    <KeyBinding Command="{Binding Path=AddWorker}" Key="Enter" 
                             CommandParameter="{Binding ElementName=listWorkers, Path=SelectedValue}"/>
-                <MouseBinding Command="{Binding Path=AddWorker}" MouseAction="LeftDoubleClick"
+                    <MouseBinding Command="{Binding Path=AddWorker}" MouseAction="LeftDoubleClick"
                               CommandParameter="{Binding ElementName=listWorkers, Path=SelectedValue}"/>
-            </ListBox.InputBindings>
-        </ListBox>
+                </ListBox.InputBindings>
+            </ListBox>
+
+        </StackPanel>
+
+        <Button x:Name="btnAllWorkers" Content="..." Visibility="{Binding Path=Enable}" Command="{Binding Path=AddSeveralWorkers}" Grid.Column="1"/>
     </Grid>
 </UserControl>
